--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -30,4 +31,29 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+.hide{
+  opacity:0;
+  transition: all 1s;
+  filter:blur(5px);
+  transform: scale(1.2);
+}
+.show{
+  opacity:1;
+  filter:blur(0px);
+  transform: scale(1);
+
+}
+.flip-y {
+  transform: rotateY(180deg);
+}
+
+.flip-x {
+  transform: rotateX(180deg);
+}
+.social_logo:nth-child(2){
+  transition-delay: 200ms;
+}
+.social_logo:nth-child(3){
+  transition-delay: 400ms;
 }
