--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,12 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-
+.glow {
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.8), 
+               0 0 10px rgba(255, 255, 255, 0.6), 
+               0 0 15px rgba(255, 255, 255, 0.4);
+               
+}
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -76,8 +81,20 @@ body {
   transform: rotateX(180deg);
 }
 .social_logo:nth-child(2){
-  transition-delay: 200ms;
+  transition-delay: 1000ms;
 }
 .social_logo:nth-child(3){
+  transition-delay: 2000ms;
+}
+.cheesy_quote:nth-child(2){
+  transition-delay: 200ms;
+}
+.cheesy_quote:nth-child(3){
   transition-delay: 400ms;
+}
+.cheesy_quote:nth-child(4){
+  transition-delay: 600ms;
+}
+.cheesy_quote:nth-child(5){
+  transition-delay: 800ms;
 }
