--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,18 @@ body {
   filter:blur(5px);
   transform: scale(1.2);
 }
+.hideLoadInElement{
+  opacity:0;
+  transition: all 4s;
+  filter:blur(5px);
+  transform: scale(1.2);
+}
+.hideCheesyQuote{
+  opacity:0;
+  transition: all 4s;
+  filter:blur(5px);
+  transform: scale(1.8);
+}
 .hideTop{
   opacity:0;
   transition: all 3s;
@@ -81,20 +93,8 @@ body {
   transform: rotateX(180deg);
 }
 .social_logo:nth-child(2){
-  transition-delay: 1000ms;
+  transition-delay: 300ms;
 }
 .social_logo:nth-child(3){
-  transition-delay: 2000ms;
-}
-.cheesy_quote:nth-child(2){
-  transition-delay: 200ms;
-}
-.cheesy_quote:nth-child(3){
-  transition-delay: 400ms;
-}
-.cheesy_quote:nth-child(4){
   transition-delay: 600ms;
-}
-.cheesy_quote:nth-child(5){
-  transition-delay: 800ms;
 }
