--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,3 +98,25 @@ body {
 .social_logo:nth-child(3){
   transition-delay: 600ms;
 }
+@keyframes blink {
+  0%, 1% { opacity: 1; }
+  2%, 3% { opacity: 0; } /* Fully visible */
+  4%, 5% { opacity: 1; } /* Fully visible */
+  6%, 7% { opacity: 0; } /* Fully visible */
+
+  8%, 100% { opacity: 1; } /* Stay visible */
+}
+.blink { animation: blink 3s  infinite; }
+
+@keyframes nameSlider {
+  0%, 16% { opacity: 1; } /* Fully visible */
+  17%, 100% { opacity: 0; } /* Stay visible */
+}
+
+/* Apply animation to each h1 with a delay for each */
+.nameSlider h1:nth-child(1) { animation: nameSlider 18s infinite; }
+.nameSlider h1:nth-child(2) { animation: nameSlider 18s infinite 3s; }
+.nameSlider h1:nth-child(3) { animation: nameSlider 18s infinite 6s; }
+.nameSlider h1:nth-child(4) { animation: nameSlider 18s infinite 9s; }
+.nameSlider h1:nth-child(5) { animation: nameSlider 18s infinite 12s; }
+.nameSlider h1:nth-child(6) { animation: nameSlider 18s infinite 15s; }
